--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
+    "@material-ui/icons": "^3.0.1",
+    "@zeit/next-css": "^1.0.1",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
     "react": "^16.4.2",
